# Robot-Programming-Project

./: Untitled Document 2  codes  runcodes2  running instructions
INFO7002_ws/devel/: .catkin
INFO7002_ws/devel/lib/pkgconfig/: sending_files.pc
INFO7002_ws/devel/lib/sending_files/: receiver  sender
INFO7002_ws/devel/share/sending_files/cmake/: sending_filesConfig.cmake
INFO7002_ws/src/sending_files/: CMakeLists.txt
INFO7002_ws/src/sending_files/launch/: sendnreceive.launch
INFO7002_ws/src/sending_files/src/: NameList.txt  receiver.cpp  sender.cpp
catkin_ws/devel/: .catkin  setup.sh
catkin_ws/devel/include/option3_package/: CustomService.h  CustomServiceRequest.h  CustomServiceResponse.h
catkin_ws/devel/lib/option3_package/: audience_1  audience_2  listener  service_client  service_server  talker  youtuber_1  youtuber_2  youtuber_3
catkin_ws/devel/lib/pkgconfig/: option3_package.pc
catkin_ws/devel/lib/python3/dist-packages/option3_package/srv/: _CustomService.py
catkin_ws/devel/share/common-lisp/ros/option3_package/srv/: CustomService.lisp  _package.lisp  _package_CustomService.lisp  option3_package-srv.asd
catkin_ws/devel/share/gennodejs/ros/option3_package/srv/: CustomService.js
catkin_ws/devel/share/option3_package/cmake/: option3_package-msg-paths.cmake  option3_packageConfig.cmake
catkin_ws/devel/share/roseus/ros/option3_package/: manifest.l
catkin_ws/devel/share/roseus/ros/option3_package/srv/: CustomService.l
catkin_ws/src/option3_package/: CMakeLists.txt  package.xml
catkin_ws/src/option3_package/launch/: five_nodes.launch
catkin_ws/src/option3_package/src/: audience_1.cpp  audience_2.cpp  client.cpp  server.cpp  talker.cpp  youtuber_1.cpp  youtuber_2.cpp  youtuber_3.cpp
catkin_ws/src/option3_package/srv/: CustomService.srv
